feat: finalixando produção e consumo de notificação e mensagem

--- a/projeto-consumer/validador-boleto/pom.xml
+++ b/projeto-consumer/validador-boleto/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.rocha</groupId>
+	<groupId>br.com.mensageria</groupId>
 	<artifactId>validador-boleto</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>validador-boleto</name>
