--- a/projeto-consumer/validador-boleto/src/main/resources/application.properties
+++ b/projeto-consumer/validador-boleto/src/main/resources/application.properties
@@ -1,28 +1,41 @@
+# Configurações gerais do Spring Boot
 spring.application.name=validador-boleto
 
 #server.port=8383
+# Define a porta do servidor de forma aleatória entre 8383 e 9090
 server.port=${random.int(8383,9090)}
+
+# Configurações do H2 Database
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:validador-boleto
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=123
+
+# Configurações do JPA e Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-
+# Configurações do Kafka
 spring.kafka.bootstrapServers=localhost:19092
+
+# Configurações do Schema Registry
 spring.kafka.properties.schema.registry.url=http://localhost:8081
+
+# Habilita o Specific Avro Reader para desserialização de mensagens Avro
 spring.kafka.properties.specific.avro.reader=true
 
+# Configurações do Listener do Kafka
 spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
 
+# Configurações dos Serializers e Deserializers do Kafka
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 
+# Configurações dos tópicos e grupo do Kafka
 spring.kafka.consumer.group-id=validador-boleto
 spring.kafka.topico-boleto=solicitacao-boleto
 spring.kafka.topico-notificacao=notificacao-boleto
