--- a/projeto-producer/api-boleto/src/main/resources/application.properties
+++ b/projeto-producer/api-boleto/src/main/resources/application.properties
@@ -1,21 +1,37 @@
 spring.application.name=api-boleto
-
-
+#Servidor
 server.port=8282
+
+# Banco de Dados H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:boleto
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=123
+
+# JPA / HIBERNATE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.kafka.bootstrapServers=localhost:19092
-
+# Configurações do Schema Registry
 spring.kafka.properties.schema.registry.url=http://localhost:8081
+
+# Tópicos Kafka usados na aplicação
 spring.kafka.topico-boleto=solicitacao-boleto
+spring.kafka.topico-notificacao=notificacao-boleto
+spring.kafka.consumer.group-id=api-boleto
+
+# Configuração para usar Specific Avro Reader
+spring.kafka.properties.specific.avro.reader=true
+
+# Serializadores e Desserializadores
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
+
+# Caso queira usar JSON ao inves de AVRO, descomente as linhas abaixo e comente as linhas de AVRO acima
 #spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 
